<resources>
    <string name="app_name">AppDoptame</string>
    <string name="facebook_app_id">1300026347405572</string>
    <string name="fb_login_protocol_scheme">fb1300026347405572</string>
    <string name="facebook_client_token">4be03805fe39a10416e9d19d7c306280</string>
    <string name="app_about">AppDoptame, proyecto del curso Proyecto Integrador I (2022-2). Desarrollado
        por Juan Manuel Muñoz Arias, Santiago Puerta Florez y Andres Guerra Montoya. </string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar constraseña</string>
    <string name="login">Ingresar</string>
    <string name="age">Edad</string>
    <string name="sing_up">Regístrate</string>
    <string name="create_user">Crear usuario</string>
    <string name="contact_user">Contactar usuario</string>
    <string name="send_images">Imagenes a enviar</string>
    <string name="phone">Número de teléfono</string>
    <string name="remember_me">Mantener sesión iniciada</string>
    <string name="name">Nombre</string>
    <string name="identification">C.C.</string>
    <string name="last_name">Apellidos</string>
    <string name="like">me gusta</string>
    <string name="comment">Comentar</string>
    <string name="share">Compartir</string>
    <string name="adopt">Adoptar</string>
    <string name="predict_race">Predecir raza</string>
    <string name="or_login_with">O ingresa con</string>
    <string name="days_ago">%s days ago</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="minutes_ago">%s minutes ago</string>
    <string name="few_moments_ago">Few moments ago</string>
    <string name="likes">%s me gusta</string>
    <string name="dont_you_have_an_account">¿No tienes una cuenta?</string>
    <string name="profile">Perfil</string>
    <string name="notifications">Notificaciones</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="post_pet">Publicar mascota</string>
    <string name="messages">Mensajes</string>
    <string name="home">Inicio</string>
    <string name="pet_name">Nombre de la mascota</string>
    <string name="pet_type">Tipo de mascota</string>
    <string name="breed">Raza</string>
    <string name="pet_age">Edad de la mascota</string>
    <string name="pet_description">Descripción de la mascota</string>
    <string name="pet_sex">Sexo de la mascota</string>
    <string name="pet_size">Tamaño de la mascota</string>
    <string name="sterilized">¿Está esterilizado?</string>
    <string name="pet_weight">Peso de la mascota</string>
    <string name="create_pet">Crear mascota</string>
    <string name="find_pet">Encontrar mascota</string>
    <string name="select_image">Seleccionar imagenes</string>
    <string name="select">Seleccionar</string>
    <string name="settings">Configuraciones</string>
    <string name="search">Buscar</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="delete_pet">Eliminar mascota</string>
    <string name="edit_pet">Editar mascota</string>
    <string name="edit_user">Editar usuario</string>
    <string name="save_pet">Guardar mascota</string>
    <string name="kind_pet">¿Qué tipo de mascota deseas publicar?</string>
    <string name="recommendations_title">¡Encuentra a tu mascota ideal aquí!</string>
    <string name="recommendations_explanation">El modelo de recomendación de mascotas se alimenta en base a los likes que otorgas en la aplicación. El modelo toma dichas interacciones y define un perfil de usuario en específico. Con esto obtiene una mascota entre todas las que se encuentran en la base de datos que mejor se adapta a dicho perfil, obteniendo así tu mascota ideal.</string>
    <string name="post_dog">Publicar un perro</string>
    <string name="post_cat">Publicar un gato</string>
    <string name="post_hamster">Publicar un hamster</string>
    <string name="post_snake">Publicar una serpiente</string>
    <string name="post_bunny">Publicar un conejo</string>
    <string name="post_bird">Publicar un ave</string>
    <string name="post_fish">Publicar un pez</string>
    <string name="post_turtle">Publicar una tortuga</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="waiting_adopt">Esperando a que el usuario envíe una respuesta</string>
    <string name="waiting_adopt_success">El usuario ha aceptado. ¡La mascota ha sido adoptada!</string>
    <string name="waiting_adopt_failure">El usuario ha rechazado la solicitud</string>
    <string name="waiting_adopt_timeout">Se ha excedido el tiempo limite de la solicitud</string>
    <string name="finish_adopt">El usuario desea concretar ya el proceso de adopción. ¿Deseas concretarlo tú también?</string>
    <string name="create_chat_text_1">¿Seguro que deseas contactar a</string>
    <string name="create_chat_text_2">para adoptar a</string>
    <string name="type_a_message">Escribe un mensaje...</string>
    <string name="you">Tú</string>
    <string name="your_chats">Tus conversaciones</string>
    <string name="notification_new_post_1">acaba de publicar a</string>
    <string name="notification_new_post_2">. ¡Dale un vistazo!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="type_a_comment">Escribe un comentario...</string>
    <string name="post_comments">Comentarios de la publicación</string>
    <string name="why_adopt">¿Por qué deberías adoptar a la mascota?</string>
    <string name="adopt_start">Se ha comenzado el proceso para concretar la adopción</string>
    <string name="adopt_no">Se ha rechazado el proceso de adopción</string>
    <string name="adopt_timeout">Se ha excedido el tiempo de espera</string>
    <string name="adopt_yes">Se ha aceptado el proceso de adopción :)</string>
    <string name="adopt_cancel">Se ha cancelado la solicitud</string>
    <string name="sent_a_file">Ha enviado un archivo</string>
    <string name="sent_a_image">Ha enviado una imagen</string>
</resources>