<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_feed"
        android:icon="@drawable/navigation_home_icon"
        android:title="@string/home"
        />
    <item
        android:id="@+id/menu_messages"
        android:icon="@drawable/navigation_messages_icon"
        android:title="@string/messages"
        />
    <item
        android:id="@+id/menu_post_pet"
        android:icon="@drawable/navigation_post_icon"
        android:title="@string/post_pet"
        />
    <item
        android:id="@+id/menu_recommendation"
        android:icon="@drawable/navigation_recommendations_icon"
        android:title="@string/recommendations"
        />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/navigation_user_icon"
        android:title="@string/profile"
        />

</menu>