<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:splitMotionEvents="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_transparent_orange_long"
        android:tint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <LinearLayout
        android:splitMotionEvents="false"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text_rounded"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="12dp"
            android:theme="@style/FontLight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_edit_text_rounded"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="12dp"
            android:theme="@style/FontLight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="?attr/cardCornerRadius"
            app:cardElevation="?attr/cardElevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/login_login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:theme="@style/FontNormal"
                android:foreground="?android:selectableItemBackgroundBorderless"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/login"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp" />
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/login_remember_me_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="?attr/subtitleTextColor"
            android:theme="@style/FontLight"
            android:buttonTint="?attr/colorPrimary"
            android:text="@string/remember_me" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/FontLight"
        android:gravity="center"
        android:maxLines="1"
        android:padding="20dp"
        android:text="@string/or_login_with"
        android:textColor="?attr/subtitleTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:splitMotionEvents="false"
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_google_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/google_logo">

        </de.hdodenhof.circleimageview.CircleImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_facebook_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/facebook_logo">

        </de.hdodenhof.circleimageview.CircleImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:theme="@style/FontLight"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/dont_you_have_an_account"
            android:textColor="?attr/subtitleTextColor"
            android:textSize="12sp" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/login_sing_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:theme="@style/FontNormal"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/sing_up"
            android:textColor="?attr/titleTextColor"
            android:layout_marginBottom="70dp"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

