<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:splitMotionEvents="false"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:splitMotionEvents="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/edit_pet_type_image"
                        android:layout_width="0dp"
                        android:src="@drawable/image_bird"
                        android:scaleType="centerCrop"
                        android:layout_height="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                    <TextView
                        android:id="@+id/edit_pet_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_pet"
                        android:textColor="?attr/titleTextColor"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"
                        android:theme="@style/FontExtraBold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/edit_pet_type_image"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pet_name"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    android:layout_marginTop="10dp"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_name_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="textPersonName"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/breed"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_breed_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="textPersonName"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/age"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    android:layout_marginTop="10dp"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_age_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="number"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:textSize="12sp">

                    <TextView
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:textColor="?attr/subtitleTextColor"
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pet_sex" />

                    <RadioButton
                        android:checked="true"
                        android:textColorHint="?attr/colorPrimary"
                        android:textSize="15sp"
                        android:textColor="?attr/titleTextColor"
                        android:theme="@style/FontLight"
                        android:buttonTint="@color/orange"
                        android:id="@+id/edit_pet_male_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:textColorHint="?attr/colorPrimary"
                        android:textSize="15sp"
                        android:textColor="?attr/titleTextColor"
                        android:theme="@style/FontLight"
                        android:buttonTint="@color/orange"
                        android:id="@+id/edit_pet_female_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pet_size"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_size_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="number"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="12dp"
                    android:textSize="12sp">

                    <TextView
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:id="@+id/textView43"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sterilized" />

                    <RadioButton
                        android:checked="true"
                        android:textColorHint="?attr/colorPrimary"
                        android:textSize="15sp"
                        android:textColor="?attr/titleTextColor"
                        android:theme="@style/FontLight"
                        android:buttonTint="@color/orange"
                        android:id="@+id/edit_pet_sterilized_yes_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:textColorHint="?attr/colorPrimary"
                        android:textSize="15sp"
                        android:textColor="?attr/titleTextColor"
                        android:theme="@style/FontLight"
                        android:buttonTint="@color/orange"
                        android:id="@+id/edit_pet_sterilized_no_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pet_weight"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_weight_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="number"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/pet_description"
                    android:layout_marginTop="10dp"
                    android:textColorHint="?attr/subtitleTextColor"
                    app:hintTextColor="@color/orange"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="2dp"
                    app:startIconTint="?attr/subtitleTextColor"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_paw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_pet_description_field"
                        android:layout_width="match_parent"
                        android:theme="@style/FontLight"
                        android:textSize="15sp"
                        android:inputType="textMultiLine"
                        android:textColor="?attr/titleTextColor"
                        android:textColorHint="?attr/subtitleTextColor"
                        android:layout_height="wrap_content">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/edit_pet_images_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/FontLight"
                    android:textColor="?attr/subtitleTextColor"
                    android:textSize="15sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/edit_pet_pick_images_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="vertical" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/orange"
                    app:cardCornerRadius="?attr/cardCornerRadius"
                    app:cardElevation="?attr/cardElevation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/edit_pet_edit_pet_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:foreground="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/edit_pet"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="15sp"
                        android:theme="@style/FontNormal" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>